[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/coin_bonus.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/CoinBonus.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/coin.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/images/coin_bonus_particule.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.5
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( -7, -3, -8, 0, -7, 3, -4, 7, 0, 8, 4, 7, 7, 3, 8, 0, 7, -3, 4, -7, 0, -8, -4, -7 )

[sub_resource type="Animation" id=13]
resource_name = "delete"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 9.0 ]
}

[node name="Coin" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Particles2D"]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )
disabled = true

[node name="Detector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 11 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0
pitch_scale = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/delete = SubResource( 13 )
[connection signal="timeout" from="Particles2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
